@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-02T01:01:49Z",
+  "timestamp" : "2022-07-02T16:14:22Z",
   "count_outdated" : 370,
   "uniques_outdated" : 200,
   "count" : 394,
-  "uniques" : 214,
+  "uniques" : 215,
   "clones" : [
     {
       "timestamp": "2022-06-18T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -95,6 +95,13 @@
       "count_minmax": [ 1, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-07-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
