@@ -1,3 +1,10 @@
+2022-07-02T16:14:22Z:
+* notice: last 14d: unq all: 2 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 200 370 / 214 394
+* notice: next accum: outdated-unq outdated-all / unq all: 200 370 / 215 394
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-18 2022-07-02]
+
 2022-07-02T01:01:49Z:
 * notice: last 14d: unq all: 2 24
 * notice: prev accum: outdated-unq outdated-all / unq all: 200 370 / 214 393
